# purple-events

./: .gitignore  CNAME  Makefile.am  README.md  configure.ac  index.html  meson.build
data/: purple-events.pc.in
include/: purple-events-context.h  purple-events-handler.h  purple-events.h
po/: POTFILES.in  de.po  fr.po
src/lib/: context.c  handler.c  utils.c
src/plugin/: callbacks.c  callbacks.h  events.c  events.h  ui.c  ui.h  utils.c  utils.h
src/plugin-exec/: exec.c
vapi/: purple-events.deps  purple-events.vapi
